# PROJET_META

./: .gitignore  LICENSE  main.py
Instances/: Minorants
clib/: Makefile  Makefile.options  README.md  annealing.c  annealing.h  avl.c  avl.h  dfs.c  dfs.h  dist.c  dist.h  draw.c  draw.h  greedy.c  greedy.h  include.h  main.c  neighbourhood.c  neighbourhood.h  old_main.c  point.c  point.h  queue.c  queue.h  rwfile.c  rwfile.h  tools.c  tools.h
clib/doc/: Doxyfile
clib/doc/html/: annotated.html  classes.html  dist_8h_source.html  files.html  include_8h_source.html  index.html  md__home_adrien_Documents_META_clib_README.html  pages.html  point_8h_source.html  rwfile_8h_source.html  struct__PointFile-members.html  struct__PointFile.html  struct__TPoint-members.html  struct__TPoint.html  tools_8h_source.html
clib/doc/html/search/: all_0.js  pages_0.js  searchdata.js
clib/doc/latex/: annotated.tex  md__home_adrien_Documents_META_clib_README.tex  refman.tex  struct__PointFile.tex  struct__TPoint.tex
clib/src/: annealing.c  annealing.h  avl.c  avl.h  check.c  check.h  dfs.c  dfs.h  dist.c  dist.h  draw.c  draw.h  greedy.c  greedy.h  include.h  kdtree.h  main.c  neighbourhood.c  neighbourhood.h  old_main.c  point.c  point.h  progress.c  progress.h  queue.c  queue.h  rwfile.c  rwfile.h  test.c  tools.c  tools.h  toto
clib/test/: main_test.c  test_unit.c  test_unit.h
cpplib/: .ycm_extra_conf.py  CMakeLists.txt  build.sh
cpplib/include/: draw.h  greedy.hpp  grid.hpp  gridEO.h  gridEval.h  gridInit.h  gridMoUtils.h  gridNeighbor.h  gridNeighborhood.h  gridOrderNeighborhood.h  include.h  mip.hpp  node.hpp  rwfile.h
cpplib/inst/random/: Minorants
cpplib/src/: draw.cpp  grid.cpp  kdtree.c  main.cpp  mip.cpp  node.cpp  rwfile.cpp
pythlib/: dfs.py  draw.py  glouton.py  grille.py  main.py  point.py  readfile.py  recuit.py  voisinage.py
